--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="obecne">
-  <p>Long story short, my name is Jiri Stepanek and I’m 18 years old. Although I still haven't finished high school, I run a small agency called PalmMedia. I personally specialize in social media marketing and web development. I spent most of my time working for clients, in the GYM or just playing with my cat.</p>
+  <p>Long story short, my name is Jiri Stepanek and I’m 18 years old. Although I still haven't finished high school, I run a small agency called PalmMedia. I personally specialize in social media marketing and web development. I spent most of my time working for my clients, in the GYM or just playing with my cat.</p>
   <img src="assets/img/mojeFoto.jpg" alt="Jiri Stepanek">
 </section>
 <section class="spojeni">
@@ -52,7 +52,7 @@ layout: default
   <div class="projekty">
     <h2>My own projects</h2>
     <h4>(to see some client work, visit palmmedia.co)</h4>
-    <ul class="projekty">
+    <ul>
       <li>
         <a href="https://palmmedia.co/">
           <div class="projekt palmmedia"></div>
@@ -84,7 +84,7 @@ layout: default
           <h3>
             <a href="{{ post.url }}">{{ post.title }}</a>
           </h3>
-          <p class="datum">{{ post.date | date: "%B %e, %Y" }}</p>
+          <p class="datum">{{ post.date | date: "%m/%d/%Y" }}</p>
           <p class="uryvek">{{ post.uryvek }}</p>
         </li>
       {% endfor %}
