--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ layout: default
         <p>thanks for your attention<br><br>Jiri Stepanek</p>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-      <script src="assets/js/app.js"></script>
+      <script src="/assets/js/app.js"></script>
     </footer>
   </div>
 </section>
