--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
           </a>
         </li>
         <li>
-          <a href="https://instagram.com/StyvekDrtic">
+          <a href="https://twitter.com/StyvekDrtic">
             <img src="assets/img/tw.png" alt="Twitter @StyvekDrtic">
           </a>
         </li>
@@ -43,7 +43,7 @@ layout: default
       <a href="tel:+420605176305">+420 605 176 305</a>
     </div>
   </div>
-  <div class="konzultace">
+  <div class="konzultace hpKonzultace">
     <p>Can I help you with anything?<br>Let’s chat for 30 minutes!</p>
     <a href="https://jiristepanek1.typeform.com/to/QoGofW">schedule free consultation</a>
   </div>
