--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="obecne">
-  <p>Long story short, my name is Jiri Stepanek and I’m 18 years old. Although I still haven't finished high school, I run a small agency called PalmMedia. I personally specialize in social media marketing and web development. I spent most of my time working for my clients, in the GYM or just playing with my cat.</p>
+  <p>Long story short, my name is Jiri Stepanek and I’m 18 years old. Although I still haven't finished high school, I run a small agency called PalmMedia. I personally specialize in social media marketing and web development. I spent most of my time staring at a computer screen, in the GYM or just playing with my cat.</p>
   <img src="assets/img/mojeFoto.jpg" alt="Jiri Stepanek">
 </section>
 <section class="spojeni">
