--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ layout: default
     <h4>(to see some client work, visit palmmedia.co)</h4>
     <ul>
       <li>
+        <a href="https://instagram.com/zblunk">
+          <div class="projekt zblunk"></div>
+        </a>
+      </li>
+      <li>
         <a href="https://palmmedia.co/">
           <div class="projekt palmmedia"></div>
         </a>
