--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
       </ul>
     </div>
     <div class="kontakty">
-      <a href="mailto:jiristepanek@hotmail.com">jiristepanek@hotmail.com</a>
+      <a href="mailto:jiri@palmmedia.cz">jiri@palmmedia.cz</a>
       <a href="tel:+420605176305">+420 605 176 305</a>
     </div>
   </div>
