--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="obecne">
-  <p>Long story short, my name is Jiri Stepanek and I’m 18 years old. Although I still haven't finished high school, I run a small agency called PalmMedia. I personally specialize in social media marketing and web development. I spent most of my time staring at a computer screen, in the GYM or just playing with my cat.</p>
+  <p>Long story short, my name is Jiri Stepanek and I’m 18 years old. Although I still haven't finished high school, I run a small agency called PalmMedia. I personally specialize in social media marketing and podcasting. I spent most of my time staring at a computer screen, in the GYM or just playing with my cat.</p>
   <img src="assets/img/mojeFoto.jpg" alt="Jiri Stepanek">
 </section>
 <section class="spojeni">
@@ -27,7 +27,7 @@ layout: default
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/channel/UCPPueu99TV68iAeEAbunYdA">
+          <a href="https://www.youtube.com/channel/UCCfe-oZN931qC27O7pEqB_Q">
             <img src="assets/img/yt.png" alt="Youtube Jiri Stepanek">
           </a>
         </li>
@@ -54,7 +54,7 @@ layout: default
     <h4>(to see some client work, visit palmmedia.co)</h4>
     <ul>
       <li>
-        <a href="https://instagram.com/zblunk">
+        <a href="https://zblunkmedia.com/">
           <div class="projekt zblunk"></div>
         </a>
       </li>
