--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@ layout: default
     <div class="articlesInner">
       <h2>articles</h2>
       <ul>
+        <li class="article">
+          <h3>
+            <a href="https://medium.com/@jiristepanek164/7-habits-that-totally-changed-my-life-e90c70c5379c">7 habits that changed my life</a>
+          </h3>
+          <p class="datum">04/23/209</p>
+          <p class="uryvek">I used to be a very lazy kid. I could spend hours watching useless videos on youtube, procrastinate my way through the day and I would...</p>
+        </li>
       {% for post in site.posts %}
         <li class="article">
           <h3>
